add persistent data functionality, use history chat messages as context; change frontend to light theme