@@ -17,6 +17,7 @@ import org.springframework.transaction.annotation.Transactional;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -28,45 +29,100 @@ public class ChatService {
     private final UserRepository userRepository;
     private final AiServiceClient aiServiceClient;
 
+    // ── SESSION HELPERS ──────────────────────────────────────────
+
+    private ChatDTOs.SessionResponse toSessionResponse(ChatSession s) {
+        return new ChatDTOs.SessionResponse(s.getId(), s.getMode(), s.getTitle(), s.getCreatedAt());
+    }
+
+    private ChatDTOs.MessageResponse toMessageResponse(ChatMessage m) {
+        return new ChatDTOs.MessageResponse(
+                m.getId(), m.getRole(), m.getContent(),
+                m.getExtractedFacts(), null, m.getCreatedAt()
+        );
+    }
+
+    /** Generate a short title from the first user message (max 60 chars). */
+    private String generateTitle(String firstMessage) {
+        if (firstMessage == null || firstMessage.isBlank()) return "Phiên mới";
+        String t = firstMessage.trim().replaceAll("\\s+", " ");
+        return t.length() <= 60 ? t : t.substring(0, 57) + "...";
+    }
+
+    // ── GUEST SESSIONS (no login required) ──────────────────────
+
+    @Transactional
+    public ChatDTOs.SessionResponse createGuestSession(String guestId, ChatDTOs.CreateSessionRequest request) {
+        String mode = (request != null && request.mode() != null) ? request.mode() : "neutral";
+        ChatSession session = ChatSession.builder()
+                .guestId(guestId)
+                .mode(mode)
+                .title("Phiên mới")
+                .build();
+        session = sessionRepository.save(session);
+        return toSessionResponse(session);
+    }
+
+    @Transactional(readOnly = true)
+    public List<ChatDTOs.SessionResponse> getGuestSessions(String guestId) {
+        return sessionRepository.findByGuestIdOrderByCreatedAtDesc(guestId)
+                .stream().map(this::toSessionResponse).collect(Collectors.toList());
+    }
+
+    // ── AUTHENTICATED SESSIONS ───────────────────────────────────
+
     @Transactional
     public ChatDTOs.SessionResponse createSession(String userEmail, ChatDTOs.CreateSessionRequest request) {
         User user = userRepository.findByEmail(userEmail)
                 .orElseThrow(() -> new UsernameNotFoundException("User not found: " + userEmail));
-
-        String mode = (request.mode() != null) ? request.mode() : "neutral";
+        String mode = (request != null && request.mode() != null) ? request.mode() : "neutral";
         ChatSession session = ChatSession.builder()
-                .user(user)
-                .mode(mode)
-                .build();
+                .user(user).mode(mode).title("Phiên mới").build();
         session = sessionRepository.save(session);
-        return new ChatDTOs.SessionResponse(session.getId(), session.getMode(), session.getCreatedAt());
+        return toSessionResponse(session);
     }
 
+    @Transactional(readOnly = true)
+    public List<ChatDTOs.SessionResponse> getUserSessions(String userEmail) {
+        User user = userRepository.findByEmail(userEmail)
+                .orElseThrow(() -> new UsernameNotFoundException("User not found: " + userEmail));
+        return sessionRepository.findByUserIdOrderByCreatedAtDesc(user.getId())
+                .stream().map(this::toSessionResponse).collect(Collectors.toList());
+    }
+
+    // ── MESSAGE SENDING ──────────────────────────────────────────
+
     @Transactional
-    public ChatDTOs.MessageResponse sendMessage(String userEmail, UUID sessionId, ChatDTOs.SendMessageRequest request) {
+    public ChatDTOs.MessageResponse sendMessage(UUID sessionId, ChatDTOs.SendMessageRequest request) {
         ChatSession session = sessionRepository.findById(sessionId)
                 .orElseThrow(() -> new RuntimeException("Session not found: " + sessionId));
 
-        // Verify session belongs to user
-        if (!session.getUser().getEmail().equals(userEmail)) {
-            throw new SecurityException("Access denied to session: " + sessionId);
+        // Load prior conversation history for context
+        List<ChatMessage> history = messageRepository.findBySessionIdOrderByCreatedAtAsc(sessionId);
+
+        // Auto-generate title on first message
+        if (history.isEmpty() && (session.getTitle() == null || session.getTitle().equals("Phiên mới"))) {
+            session.setTitle(generateTitle(request.content()));
+            sessionRepository.save(session);
         }
 
         // Save user message
         ChatMessage userMessage = ChatMessage.builder()
-                .session(session)
-                .role("user")
-                .content(request.content())
-                .build();
+                .session(session).role("user").content(request.content()).build();
         messageRepository.save(userMessage);
 
-        // Call AI service
+        // Build conversation history list for AI context
+        List<Map<String, String>> conversationHistory = history.stream()
+                .map(m -> Map.of("role", m.getRole(), "content", m.getContent()))
+                .collect(Collectors.toList());
+
+        // Call AI service with history
         String role = (request.role() != null) ? request.role() : session.getMode();
-        log.info("Calling AI service for session {} with role {}", sessionId, role);
+        log.info("Calling AI service for session {} with role {}, history size {}", sessionId, role, conversationHistory.size());
 
         AiServiceClient.PredictResponse aiResponse;
         try {
-            aiResponse = aiServiceClient.predict(request.content(), role, request.rebuttalAgainst());
+            aiResponse = aiServiceClient.predict(request.content(), role, request.rebuttalAgainst(), conversationHistory);
         } catch (Exception e) {
             log.error("AI service error: {}", e.getMessage());
             throw new RuntimeException("Dịch vụ AI không khả dụng. Vui lòng thử lại sau. (" + e.getMessage() + ")");
@@ -74,8 +130,7 @@ public class ChatService {
 
         // Save AI message
         ChatMessage aiMessage = ChatMessage.builder()
-                .session(session)
-                .role("assistant")
+                .session(session).role("assistant")
                 .content(aiResponse.result())
                 .extractedFacts(aiResponse.extractedFacts())
                 .mappedLaws(aiResponse.mappedLaws())
@@ -83,41 +138,31 @@ public class ChatService {
         messageRepository.save(aiMessage);
 
         return new ChatDTOs.MessageResponse(
-                aiMessage.getId(),
-                "assistant",
-                aiResponse.result(),
-                aiResponse.extractedFacts(),
-                aiResponse.mappedLaws(),
-                aiMessage.getCreatedAt()
+                aiMessage.getId(), "assistant", aiResponse.result(),
+                aiResponse.extractedFacts(), aiResponse.mappedLaws(), aiMessage.getCreatedAt()
         );
     }
 
+    // ── HISTORY ──────────────────────────────────────────────────
+
     @Transactional(readOnly = true)
-    public ChatDTOs.ConversationHistoryResponse getHistory(String userEmail, UUID sessionId) {
+    public ChatDTOs.ConversationHistoryResponse getHistory(UUID sessionId) {
         ChatSession session = sessionRepository.findById(sessionId)
                 .orElseThrow(() -> new RuntimeException("Session not found: " + sessionId));
-
-        if (!session.getUser().getEmail().equals(userEmail)) {
-            throw new SecurityException("Access denied to session: " + sessionId);
-        }
-
         List<ChatMessage> messages = messageRepository.findBySessionIdOrderByCreatedAtAsc(sessionId);
-        List<ChatDTOs.MessageResponse> messageDTOs = messages.stream()
-                .map(m -> new ChatDTOs.MessageResponse(
-                        m.getId(), m.getRole(), m.getContent(),
-                        m.getExtractedFacts(), null, m.getCreatedAt()
-                ))
-                .toList();
-
-        return new ChatDTOs.ConversationHistoryResponse(sessionId, session.getMode(), messageDTOs);
+        return new ChatDTOs.ConversationHistoryResponse(
+                sessionId, session.getMode(), session.getTitle(),
+                messages.stream().map(this::toMessageResponse).collect(Collectors.toList())
+        );
     }
 
-    @Transactional(readOnly = true)
-    public List<ChatDTOs.SessionResponse> getUserSessions(String userEmail) {
-        User user = userRepository.findByEmail(userEmail)
-                .orElseThrow(() -> new UsernameNotFoundException("User not found: " + userEmail));
-        return sessionRepository.findByUserIdOrderByCreatedAtDesc(user.getId()).stream()
-                .map(s -> new ChatDTOs.SessionResponse(s.getId(), s.getMode(), s.getCreatedAt()))
-                .toList();
+    // ── DELETE ───────────────────────────────────────────────────
+
+    @Transactional
+    public void deleteSession(UUID sessionId) {
+        if (!sessionRepository.existsById(sessionId)) {
+            throw new RuntimeException("Session not found: " + sessionId);
+        }
+        sessionRepository.deleteById(sessionId);
     }
 }
